[gd_scene load_steps=30 format=3 uid="uid://c45gdeyuy4efd"]

[ext_resource type="Texture2D" uid="uid://wpodqcynlhgk" path="res://assets/Aberrolas/BasicAberrola/Aberrola-BITE.png" id="1_2orir"]
[ext_resource type="PackedScene" uid="uid://dpkpxh578lq7e" path="res://Modules/Components/HealthComponent.tscn" id="1_jkpr7"]
[ext_resource type="Script" path="res://Modules/Enemies/Aberrola.gd" id="1_wdcqk"]
[ext_resource type="Texture2D" uid="uid://c31a1o1ko4dis" path="res://assets/Aberrolas/BasicAberrola/Aberrola-DEATH.png" id="2_jarta"]
[ext_resource type="Texture2D" uid="uid://cpulvp32gpwlb" path="res://assets/Aberrolas/BasicAberrola/Aberrola-IDLE.png" id="3_h66gd"]
[ext_resource type="Texture2D" uid="uid://d3kb4g3hkcmhs" path="res://assets/Aberrolas/BasicAberrola/Aberrola-WALK.png" id="4_knluu"]
[ext_resource type="PackedScene" uid="uid://cmktptxcv40ro" path="res://Modules/Components/PatrolComponent.tscn" id="5_6o70t"]
[ext_resource type="PackedScene" uid="uid://bpesbccwscvws" path="res://Modules/Components/DropComponent.tscn" id="8_4tnv7"]
[ext_resource type="PackedScene" uid="uid://cp3oqhpieqwjj" path="res://Modules/Blueberry.tscn" id="9_hhgit"]
[ext_resource type="Script" path="res://Modules/Components/Drop.gd" id="10_yoiih"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0ef"]
atlas = ExtResource("1_2orir")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_njp00"]
atlas = ExtResource("1_2orir")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lm7u"]
atlas = ExtResource("2_jarta")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5rcq"]
atlas = ExtResource("2_jarta")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_is7w8"]
atlas = ExtResource("3_h66gd")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ad8g"]
atlas = ExtResource("3_h66gd")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_72f8r"]
atlas = ExtResource("4_knluu")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_14331"]
atlas = ExtResource("4_knluu")
region = Rect2(32, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7bs8l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njp00")
}],
"loop": false,
"name": &"Bite",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lm7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5rcq")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is7w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ad8g")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72f8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14331")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hb1ff"]
resource_name = "Bite"
length = 0.4
step = 0.25
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"activate_bite_attack"
}, {
"args": [],
"method": &"set_to_aggro_state"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Bite"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_d6np0"]
resource_name = "Death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_tldxm"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_noxtn"]
resource_name = "Moving"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_mdftv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l2yw8"]
_data = {
"Bite": SubResource("Animation_hb1ff"),
"Death": SubResource("Animation_d6np0"),
"Idle": SubResource("Animation_tldxm"),
"Moving": SubResource("Animation_noxtn"),
"RESET": SubResource("Animation_mdftv")
}

[sub_resource type="Resource" id="Resource_072po"]
script = ExtResource("10_yoiih")
drop_object = ExtResource("9_hhgit")
quantity = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ansk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e3lq6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dtlfc"]
radius = 120.0

[node name="Aberrola" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_wdcqk")
base_movement_speed = 100.0
max_aggro_range = 150.0
attack_range = 30.0
damage = 20.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7bs8l")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l2yw8")
}
autoplay = "Idle"

[node name="PatrolComponent" parent="." instance=ExtResource("5_6o70t")]
patrol_type = 2
relative_to_base_position = true
patrol_points = Array[Vector2]([Vector2(0, 0)])
min_patrol_time = 6.0
max_patrol_time = 8.0

[node name="HealthComponent" parent="." instance=ExtResource("1_jkpr7")]
max_health = 150.0
health_regeneration = 1.0

[node name="DropComponent" parent="." instance=ExtResource("8_4tnv7")]
drops = Array[ExtResource("10_yoiih")]([SubResource("Resource_072po")])

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_7ansk")

[node name="AggroLostTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MercilessTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BiteZone" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_e3lq6")
target_position = Vector2(0, 0)
collision_mask = 5

[node name="BiteCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="NPCDetector" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_dtlfc")
target_position = Vector2(0, 0)
max_results = 1
